Add initial swagger models (#135)
